--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -6,30 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".MessageFragment">
 
+
     <TextView
-        android:id="@+id/noMes_tv"
+        android:id="@+id/tv_messages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#9C27B0"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="No messages"
+        android:text="Messages"
+        android:textColor="#AFF643"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintVertical_bias="0.060000002" />
 
-    <Button
-        android:id="@+id/toWrite_but"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:text="to write"
-        android:textSize="24sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_users"
+        app:layout_constraintTop_toBottomOf="@+id/tv_messages"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noMes_tv"
-        app:layout_constraintVertical_bias="0.19999999" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_width="match_parent"
+        tools:listitem="@layout/item_users"
+        tools:itemCount="4"
+        android:layout_height="0dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
