--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="132dp"
         android:layout_marginEnd="64dp"
-        android:text="Notifications"
+        android:text="@string/Notifications"
         android:textColorHighlight="#645D6A"
         android:textSize="24sp"
         app:icon="@android:drawable/ic_lock_idle_alarm"
@@ -29,7 +29,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:text="Account"
+        android:text="@string/Accout"
         android:textSize="24sp"
         app:icon="@android:drawable/ic_menu_manage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:text="Privacy"
+        android:text="@string/Privacy"
         android:textSize="24sp"
         app:icon="@android:drawable/ic_menu_view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:text="Appearance"
+        android:text="@string/Appearance"
         android:textSize="24sp"
         app:icon="@android:drawable/ic_menu_edit"
         app:layout_constraintBottom_toBottomOf="parent"
