--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="#9C27B0"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="Messages"
+        android:text="@string/Messages"
         android:textColor="#AFF643"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
