--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -11,10 +11,10 @@
         android:id="@+id/tv_messages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#9C27B0"
+        android:background="@color/fiol"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="@string/Messages"
-        android:textColor="#AFF643"
+        android:textColor="@color/green2"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
