--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="primary_dark">#7B1FA2</color>
     <color name="accent">#FFC107</color>
     <color name="green">#0E7112</color>
+    <color name="green2">#AFF643</color>
+    <color name="fiol">#9C27B0</color>
 </resources>
