--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -24,7 +24,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="12dp"
             android:fontFamily="sans-serif-black"
-            android:text="@string/Name"
+            android:text="@string/tvNameText"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/tv_desc"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/desc"
+            android:text="@string/tvDescText"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_title"
